--- a/Day-9-Soundboard/styles.css
+++ b/Day-9-Soundboard/styles.css
@@ -1,16 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;400&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
+    background-color: rgb(161, 100, 223);
     font-family: 'Roboto', sans-serif;
     margin: 0;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
+    text-align: center;
     justify-content: center;
     overflow: hidden;
     height: 100vh;
+}
+
+.btn {
+    background-color: rebeccapurple;
+    border-radius: 5px;
+    border: none;
+    color: white;
+    margin:1rem;
+    padding: 1.5rem 3rem;
+    font-size: 1.2rem;
+    font-family: inherit;
+    cursor: pointer;
+}
+.btn:hover {
+    opacity: 0.9;
+}
+.btn:focus {
+    outline:none;
 }
