--- a/Day-13-Random-choice-Picker/styles.css
+++ b/Day-13-Random-choice-Picker/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #e1e1e1;
+    background-color: #2b88f0;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     display: flex;
@@ -14,4 +14,38 @@ body {
     justify-content: center;
     overflow: hidden;
     height: 100vh;
+}
+h3 {
+    color: #fff;
+    margin: 10px 0 20px;
+    text-align: center;
+}
+
+.container {
+    width: 500px;
+}
+
+textarea {
+    border: none;
+    display:block;
+    width: 100%;
+    height: 100px;
+    font-family: inherit;
+    padding: 10px;
+    margin: 0 0 20px;
+    font-size: 16px;
+}
+
+.tag {
+    background-color: #f0932b;
+    color: #fff;
+    border-radius: 50px;
+    padding: 10px 20px;
+    margin: 0 5px 10px 0;
+    font-size: 14px;
+    display: inline-block;
+}
+
+.tag.highlight {
+    background-color: #014da3;
 }
