--- a/Day-17-Movie-App/styles.css
+++ b/Day-17-Movie-App/styles.css
@@ -11,13 +11,13 @@
 body {
     font-family: 'Poppins', sans-serif;
     margin: 0; 
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
 }
 header {
     padding: 1rem;
     display: flex;
     justify-content: flex-end;
-    border: 2px solid var(--secondary-color);
+    background-color: var(--secondary-color);
 }
 .search{
     background-color: transparent;
