--- a/Day-20-Button-Ripple/styles.css
+++ b/Day-20-Button-Ripple/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #e1e1e1;
+    background-color: #000;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     display: flex;
@@ -15,3 +15,37 @@ body {
     overflow: hidden;
     height: 100vh;
 }
+
+
+button{
+    background-color: purple;
+    color: #fff;
+    border: 1px solid purple;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    padding: 20px 30px;
+    overflow: hidden;
+    margin: 10px 0;
+    position: relative;
+}
+button:focus  {
+    outline: none;
+}
+
+button .circle {
+    position: absolute;
+    background-color: #fff;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    animation: scale .5s ease-out;
+}
+
+@keyframes scale {
+    to {
+        transform: translate(-50%, -50%) scale(3);
+        opacity: 0;
+    }
+}
+
