--- a/Day-22-Drawing-App/styles.css
+++ b/Day-22-Drawing-App/styles.css
@@ -5,13 +5,39 @@
 }
 
 body {
-    background-color: #e1e1e1;
+    background-color: #f5f5f5;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
     height: 100vh;
+}
+canvas {
+    border: 2px solid steelblue;
+}
+
+.toolbox {
+    background-color: steelblue;
+    border: 1px solid slateblue;
+    display: flex;
+    width: 804px;
+    padding: 1rem;
+}
+.toolbox > * {
+    background-color: white;
+    border: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    height: 50px;
+    width: 50px;
+    margin: 0.25rem;
+    padding: .25rem;
+    cursor: pointer;
+}
+.toolbox > *:last-child {
+    margin-left: auto;
 }
