--- a/Day-27-Toast-Notification/styles.css
+++ b/Day-27-Toast-Notification/styles.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: #e1e1e1;
-    font-family: 'Roboto', sans-serif;
+    background-color: rebeccapurple;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -14,4 +14,49 @@ body {
     justify-content: center;
     overflow: hidden;
     height: 100vh;
+}
+
+.btn {
+    background-color: white;
+    color: rebeccapurple;
+    font-family: initial;
+    font-weight: bold;
+    padding: 1rem;
+    border-radius: 5px;
+    border:none;
+    cursor: pointer;
+}
+
+.btn:focus {
+    outline: none;
+}
+
+.btn:active {
+    transform: scale(0.98);
+}
+
+#toasts {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.toast {
+    background-color: white;
+    border-radius: 5px;
+    padding: 1rem 2rem;
+    margin: 0.5rem;
+}
+.toast.info {
+    color: rebeccapurple;
+}
+.toast.success {
+    color: green;
+}
+
+.toast.danger {
+    color: red;
 }
