--- a/Day-30-Auto-Text-Effect/styles.css
+++ b/Day-30-Auto-Text-Effect/styles.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #e1e1e1;
+    background-color: darksalmon;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     display: flex;
@@ -14,4 +14,23 @@ body {
     justify-content: center;
     overflow: hidden;
     height: 100vh;
+}
+
+div {
+    position: absolute;
+    bottom: 20px;
+    background: rgba(0, 0, 0, 0.1);
+    padding: 10px 20px;
+    font-size: 18px;
+}
+input {
+    width: 50px;
+    padding: 5px;
+    font-size: 18px;
+    background-color:darksalmon ;
+    border: none;
+    text-align: center;
+}
+input:focus {
+    outline: none;
 }
