--- a/Day-33-Notes-App/styles.css
+++ b/Day-33-Notes-App/styles.css
@@ -2,6 +2,7 @@
 
 * {
     box-sizing: border-box;
+    outline: none;
 }
 
 body {
@@ -29,6 +30,7 @@ body {
     background: #fff;
     box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.1);
     margin: 30px 20px;
+    overflow-y: scroll;
     height: 400px;
     width: 400px;
 }
