--- a/Day-36-Hoverboard/styles.css
+++ b/Day-36-Hoverboard/styles.css
@@ -5,13 +5,32 @@
 }
 
 body {
-    background-color: #e1e1e1;
+    background-color: #111;
     font-family: 'Roboto', sans-serif;
     margin: 0;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
     overflow: hidden;
     height: 100vh;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    max-width: 400px;
+}
+
+.square {
+    background-color: #1d1d1d;
+    box-shadow: 0 0 2px #000;
+    height: 16px;
+    width: 16px;
+    margin: 2px;
+    transition: 2s ease;
+}
+.square:hover {
+    transition-duration: 0s;
 }
