--- a/Day-39-Password-Strength-Bg/styles.css
+++ b/Day-39-Password-Strength-Bg/styles.css
@@ -1,12 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: #e1e1e1;
-    font-family: 'Roboto', sans-serif;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -14,4 +11,14 @@ body {
     justify-content: center;
     overflow: hidden;
     height: 100vh;
+}
+.background {
+    background: url('https://images.unsplash.com/photo-1575089976121-8ed7b2a54265?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80') no-repeat center center/cover;
+    position: absolute;
+    top: -20px;
+    bottom: -20px;
+    left: -20px;
+    right: -20px;
+    z-index: -1;
+    filter: blur(20px);
 }
