--- a/Day-47-Testimonial-box/styles.css
+++ b/Day-47-Testimonial-box/styles.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
 
 * {
     box-sizing: border-box;
 }
 
 body {
-    background-color: #e1e1e1;
-    font-family: 'Roboto', sans-serif;
+    background-color: #f4f4f4;
+    font-family: 'Monserrat', sans-serif;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -14,4 +14,75 @@ body {
     justify-content: center;
     overflow: hidden;
     height: 100vh;
+    padding: 10px;
+}
+
+.testimonial-container {
+    background-color: #476ce4;
+    color: #fff;
+    border-radius: 15px;
+    margin: 20px auto;
+    padding: 50px 80px ;
+    max-width: 768px;
+    position: relative;
+}
+.fa-quote {
+    color: rgba(255, 255, 255, 0.3);
+    font-size: 28px;
+    position: absolute;
+    top: 70px;
+}
+.fa-quote-right {
+    right: 40px
+}
+.fa-quote-left {
+    left: 40px
+}
+.user {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.user .user-image {
+    border-radius: 50%;
+    height: 75px;
+    width: 75px;
+    object-fit: cover;
+}
+.user .user-details {
+    margin-left: 10px;
+}
+.user .username {
+    margin: 0;
+}
+.user .role {
+    font-weight: normal;
+    margin: 10px 0;
+}
+.progress-bar {
+    background-color: #fff;
+    height: 4px;
+    width: 100%;
+    animation: grow 10s linear infinite;
+    transform-origin: left;
+}
+
+@keyframes grow {
+    0% {
+        transform: scaleX(0);
+    }
+}
+
+.testimonial {
+    line-height: 28px;
+    text-align: justify;
+}
+
+@media(max-width: 768px) {
+    .fa-quote {
+        display: none;
+    }
+    .testimonial-container {
+        padding: 20px 30px;
+    }
 }
